# homologaciones-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIA_DOCKER.md  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  reset-db.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 00ba028d973d_drop_geo_catalogs.py  09a2301938e2_add_reset_token_to_usuarios.py  13e0027db1e9_fix_add_pendiente_enum.py  1b92889cd72c_add_revision_coordinador_estado.py  21ab4741c2d0_add_academico.py  2c4b6b93e2eb_add_resolucion_to_tipodocumento.py  38b9156a4961_add_catalogos_geograficos.py  4a0464fddfc9_datos_contacto_solicitud.py  52fdbf95e437_add_academico.py  53351e9ca14b_update_academico_fields.py  7d4a1f03b8c9_add_performance_indexes.py  8d6f33335e90_add_homologacion_asignatura_fields.py  9593501dcfad_add_pendiente_to_estadoasignatura.py  a1b2c3d4e5f6_thesis_features.py  c3d4e5f6a1b2_final_changes.py  c4c36348f794_initial.py  c6d0741549a5_semestre_destino_int.py  d1e2f3a4b5c6_add_admin_role.py  e2f3a4b5c6d7_add_cedula_telefono_to_usuarios.py  e983d3d3da43_add_programa_ids_to_solicitudes.py
app/: main.py
app/core/: config.py  database.py  deps.py  security.py  seed.py
app/models/: __init__.py  academico.py  catalogo.py  documento.py  homologacion.py  resolucion.py  solicitud.py  usuario.py
app/schemas/: academico.py  catalogo.py  documento.py  homologacion.py  paginacion.py  solicitud.py  usuario.py
app/services/: ai_service.py  doc_service.py  email_service.py  kafka_service.py  pdf_service.py  storage_service.py
app/workers/: homologacion_worker.py
scripts/: reset-db.sh
templates/: plantilla_resolucion_matricula.docx  resolucion_plantilla.docx
tests/: test_endpoints.py  test_health.py
(+10 files in other folders)
