[project]
name = "homologaciones-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.107.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "kafka-python>=2.3.2",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "bcrypt>=5.0.0",
    "python-docx>=1.2.0",
    "docxtpl>=0.19.0",
    "google-genai>=2.8.0",
    "openai>=2.41.0",
    "aiosmtplib>=5.1.1",
    "pypdf>=6.13.2",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
